--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,21 @@
 <mat-toolbar color="primary">
-    <mat-toolbar-row>
-      <span>
-        <img src="./favicon.ico" [routerLink]="['../']">
-      </span>
-      <span class="example-fill-remaining-space"></span>
-      <span class="align-center"></span>
-      <span class="example-spacer"></span>
-  
-      <button mat-button [routerLink]="['../about']">about</button>
-      <button mat-button [routerLink]="['../contact']">contact</button>
-      <button mat-button [routerLink]="['../users']">users</button>
-      <button mat-button (click)="logout()">logout</button>
-  
-    </mat-toolbar-row>
-  </mat-toolbar>
-  
- <router-outlet></router-outlet>
+  <mat-toolbar-row>
+    <span>
+      <img src="./favicon.ico" [routerLink]="['../']">
+    </span>
+    <span class="example-fill-remaining-space"></span>
+    <span class="align-center"></span>
+    <span class="example-spacer"></span>
+    <button mat-button [routerLink]="['../dashboard']">Dashboard</button>
+    <button mat-button [routerLink]="['../about']">about</button>
+    <button mat-button [routerLink]="['../contact']">contact</button>
+    <button mat-button [routerLink]="['../users']">users</button>
+
+    <button *ngIf='showLogoutBtn' mat-button (click)="logout()">logout</button>
+
+
+
+  </mat-toolbar-row>
+</mat-toolbar>
+
+<router-outlet></router-outlet>
