--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -3,6 +3,8 @@
     display: flex;
     flex-direction: column;
     min-width: 300px;
+    margin-left: 20px;
+    margin-right: 20px;
   }
   
   .example-header {
@@ -20,3 +22,43 @@
     max-height: 500px;
   }
   
+  .chart {
+    display: block;
+  }
+
+  div.bar, div.line {
+  max-width: 700px;
+  }
+
+  div.bar{
+    display: flex;
+    width: 50%;
+    height: 500px;
+    background: #ffffff;
+    float: left;
+    margin-left: 20px;
+  }
+  div.line{
+    display: flex;
+    width: 50%;
+    background: #ffffff;
+    height: 500px;
+    float: right;
+    margin-right: 20px;
+  }
+
+  div.chartContainer{
+  
+    
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  hr{
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  *{
+    margin-left: 20px;
+    margin-right: 20px;
+  }
